# huaray_camera

./: CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  Makefile  armor.cpp  armor.hpp  auto_aim.cpp  auto_aim.hpp  cmake_install.cmake  huaray_camera  main.cpp
camera_include/: IMVApi.h  IMVDefines.h
camera_lib/arm64/Qt/: libQt5DBus.so.5.5.1  libQt5Network.so.5.5.1  libQt5XcbQpa.so.5.5.1  libQt5Xml.so.5.5.1
camera_lib/x86/: libMVSDKGuiQt.so.1  liblog4cpp.so.5
